--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .logo-image {
     float: left;
     position: relative;
-    padding: 15px 30px 5px 30px;
+    padding: 17px 30px 5px 30px;
 }
 
 .button {
@@ -33,7 +33,7 @@ body {
 .right-header-bar {
     position: fixed;
     right: 0;
-    padding: 7px 20px 0px 0px;
+    padding: 13px 20px 0px 0px;
 }
 
 a:link {
@@ -47,7 +47,7 @@ a:visited {
 }
 
 a:hover {
-    color: green;
+    color: #47b075;
     text-decoration: underline;
     -webkit-transition-duration: 0.2s; /* Safari */
     transition-duration: 0.2s;
@@ -60,7 +60,16 @@ a:active {
 
 .table-row {
     width: 80%;
-    padding: 10% 10% 25% 10%;
+    padding: 10% 10% 28% 10%;
+    clear: both;
+}
+
+.black-background {
+    background-color: #191919;
+}
+
+.gray-background {
+    background-color: #e9e9e9;
 }
 
 .slideshow {
@@ -77,10 +86,10 @@ img {
     margin: 0;
     padding: 0; 
     top: 0;
+    color: #47b075;
 }
 
 .intro {
-    color: #f2f2f2;
     position: absolute;
     bottom: 8px;
     font-size: 200%;
@@ -113,21 +122,27 @@ img {
     .intro {font-size: 11px}
 }
 
+.special-intro-font {
+    color: black;
+    background-color: rgba(255,255,255,0.3);
+    padding: 15px;
+}
+
 .sticky {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #ffffff
+    background-color: rgba(255,255,255,0.8);
 }
 
 .sticky + .content {
-    padding-top: 91px; 
+    padding-top: 87px; 
 }
 
 h2 {
-    color: green;
+    color: #47b075;
     font-size: 100%;
-    padding: 20px 0px 20px 0px;
+    padding: 20px 0px 40px 0px;
     text-align: center;
 }
 
@@ -136,12 +151,85 @@ p, ol, ul {
     font-size: 70%;
 }
 
+.container {
+    width: 80%;
+}
+
+.perk-box {
+    width: 20%;
+    height: 130px;
+    padding: 50px 20px 10px 20px;
+    float: left;
+    text-align: center;    
+    font-size: 20px;
+}
+
+.extra-bottom-border-facilities {
+    border: 150px solid #e9e9e9;
+    border-top-style: none;
+    border-left-style: none;
+    border-right-style: none;
+}
+
+.extra-bottom-border-pricing {
+    border: 100px solid #191919;
+    border-top-style: none;
+    border-left-style: none;
+    border-right-style: none;
+}
+
+.green-background {
+    background-color: #47b075;
+}
+
+.pricing-box {
+    width: 40%;
+    float: left;
+    background-color: #191919;
+    padding: 1% 5% 14% 4%;
+    text-align: center;
+}
+
+.box1 {
+    border: #e9e9e9 1px solid;
+    border-bottom-style: none;
+    border-top-style: none;
+}
+
+.box2 {
+    border: #e9e9e9 1px solid;
+    border-bottom-style: none;
+    border-top-style: none;
+    border-left-style: none;
+}
+
+#option-pricing-title {
+    color: white;
+    font-size: 50px;
+}
+
+#starting-price {
+    padding: 5px 0px 20px 0px;
+    font-size: 50px;
+    color: #ffff4c;
+}
+
+#photos {
+    padding: 0%;
+    clear: both;
+}
+
+.photos-section {
+    margin: 0;
+    padding: 0;
+}
+
 .box {
     width: 40%;
     float: left;
     font-size: 80%;
     margin: 0;
-    padding: 60px 30px 150px 60px;
+    padding: 40px 30px 100px 60px;
 }
 
 .mapbox {
@@ -153,16 +241,17 @@ p, ol, ul {
 }
 
 .footer {
-    background-color: #2F4F4F;
-    color: white;
+    color: black;
     clear: both;
-    padding: 10px 20px 20px 120px;
-    border: 40px solid #e9e9e9;
+    padding: 10px 20px;
+  /*border: 40px solid #e9e9e9;
     border-left-style: none;
     border-bottom-style: none;
-    border-right-style: none;
+    border-right-style: none;*/
+    text-align: center;
+    font-size: 80%;
 }
 
-#follow-us {
-    padding: 0px 0px 10px 0px;
-}  
+.footer-text {
+    color: black;
+}
