--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ body {
     padding: 0;
 }
 
-#entire-website-header {
-    overflow: hidden;
-}
-
 .logo-image {
     float: left;
     position: relative;
@@ -20,7 +16,6 @@ body {
 }
 
 .button {
-    /* border: solid 0px #FFFFFF;*/
     color: black;
     padding: 10px 20px;
     text-align: center;
@@ -101,38 +96,18 @@ img {
     background-color: #717171;
 } 
 
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 4s;
-    animation-name: fade;
-    animation-duration: 4s;
-}
-
-@-webkit-keyframes fade {
-    from {opacity: 0.25} 
-    to {opacity: 1}
-}
-
-@keyframes fade {
-    from {opacity: 0.25} 
-    to {opacity: 1}
-}
-
-@media only screen and (max-width: 300px) {
-    .intro {font-size: 11px}
-}
-
 .special-intro-font {
     color: black;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255,255,255,0.4);
     padding: 15px;
+    border-radius: 5px;
 }
 
 .sticky {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255,255,255,1);
 }
 
 .sticky + .content {
@@ -142,15 +117,20 @@ img {
 h2 {
     color: #47b075;
     font-size: 100%;
-    padding: 20px 0px 40px 0px;
+    padding: 20px 0px 0px 0px;
     text-align: center;
 }
 
 p, ol, ul {
     color: #696969;
+    text-align: center;
     font-size: 70%;
 }
 
+#lowbar {
+    font-size: 100%;
+    padding: 0px 0px 30px 0px;
+}
 .container {
     width: 80%;
 }
