--- a/style.css
+++ b/style.css
@@ -128,8 +128,9 @@ p, ol, ul {
 }
 
 #lowbar {
-    font-size: 100%;
-    padding: 0px 0px 30px 0px;
+    font-size: 80%;
+    color: #47b075;
+    padding: 20px 0px 15px 0px;
 }
 .container {
     width: 80%;
