--- a/style.css
+++ b/style.css
@@ -12,7 +12,45 @@ body {
 .logo-image {
     float: left;
     position: relative;
-    padding: 17px 30px 5px 30px;
+    padding: 3px 30px 3px 10px;
+}
+
+.topnav {
+    overflow: hidden;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    padding: 19px 23px 2px 23px;
+    text-align: center;
+    font-size: 50%;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 1020px) {
+    .topnav a:not(#first-child):not(#toggle-button) {display: none;}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 1020px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
 
 .button {
@@ -51,6 +89,13 @@ a:hover {
 a:active {
     color: #FFFFFF;
     text-decoration: underline;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgba(255,255,255,0.8);
 }
 
 .table-row {
@@ -92,26 +137,11 @@ img {
     text-align: center;
 }
 
-.active {
-    background-color: #717171;
-} 
-
 .special-intro-font {
     color: black;
     background-color: rgba(255,255,255,0.4);
     padding: 15px;
     border-radius: 5px;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgba(255,255,255,0.8);
-}
-
-.sticky + .content {
-    padding-top: 87px; 
 }
 
 h2 {
