--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+/* Entire body styling. */
 body {
     background-color: #e9e9e9;
     font-family: Avenir, Geneva, Arial, sans-serif;
-    font-size: 25px;
+    font-size: calc(20px + 12 * ((100vw - 300px) / 1300));
 }
 
 * {
@@ -9,66 +10,61 @@ body {
     padding: 0;
 }
 
+/* The positioning and padding of the WorkIn logo. */
 .logo-image {
     float: left;
     position: relative;
-    padding: 3px 30px 3px 10px;
+    padding: 13px 20px 0px 20px;
 }
 
-.topnav {
-    overflow: hidden;
-}
-
-.topnav a {
-    float: left;
-    display: block;
-    padding: 19px 23px 2px 23px;
+/* Made buttons to control padding and vertical centering. */
+.button {
+    float: right;
+    color: black;
     text-align: center;
-    font-size: 50%;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    padding: 26px 44px 0px 10px; 
+    font-size: 20px;
 }
 
+/* Don't display the three-horizontal-barred icon. Only display it when
+   width is less than 1020. */
 .topnav .icon {
     display: none;
 }
 
 @media screen and (max-width: 1020px) {
     .topnav a:not(#first-child):not(#toggle-button) {display: none;}
+
     .topnav a.icon {
         float: right;
         display: block;
+        padding: 24px 30px 10px 30px;
     }
-}
 
-@media screen and (max-width: 1020px) {
     .topnav.responsive {position: relative;}
+
     .topnav.responsive a.icon {
         position: absolute;
         right: 0;
         top: 0;
     }
+
     .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
     }
-}
 
-.button {
-    color: black;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-}
+    .sticky + .content {
+        padding-top: 77px;
+    }
+}    
 
-.right-header-bar {
-    position: fixed;
-    right: 0;
-    padding: 13px 20px 0px 0px;
-}
 
+/* Styling of the links. */
 a:link {
     color: #000000;
     text-decoration: none;
@@ -91,6 +87,7 @@ a:active {
     text-decoration: underline;
 }
 
+/* Styling of the sticky header once screen is scrolled down. */
 .sticky {
     position: fixed;
     top: 0;
@@ -98,9 +95,11 @@ a:active {
     background-color: rgba(255,255,255,0.8);
 }
 
+/* The different sections of the website are table-row classes. */
 .table-row {
+    background-color: none;
     width: 80%;
-    padding: 10% 10% 28% 10%;
+    padding: 80px 10% 28% 10%;
     clear: both;
 }
 
@@ -110,6 +109,10 @@ a:active {
 
 .gray-background {
     background-color: #e9e9e9;
+}
+
+.green-background {
+    background-color: #47b075;
 }
 
 .slideshow {
@@ -129,21 +132,19 @@ img {
     color: #47b075;
 }
 
-.intro {
-    position: absolute;
-    bottom: 8px;
-    font-size: 200%;
+.introduction-text {
+    top: 40vh;
     width: 80%;
+    left: 10vw;
     text-align: center;
-}
-
-.special-intro-font {
+    position: absolute;
+    font-size: calc(25px + 12 * ((100vw - 300px) / 1300));
     color: black;
+    padding: 20px 0px;
     background-color: rgba(255,255,255,0.4);
-    padding: 15px;
-    border-radius: 5px;
 }
 
+/* All h2's have this styling. */
 h2 {
     color: #47b075;
     font-size: 100%;
@@ -151,31 +152,69 @@ h2 {
     text-align: center;
 }
 
-p, ol, ul {
-    color: #696969;
-    text-align: center;
-    font-size: 70%;
-}
-
-#lowbar {
+/* This is to style the horizontal bar below each section title. */
+.lowbar {
     font-size: 80%;
     color: #47b075;
     padding: 20px 0px 15px 0px;
 }
-.container {
-    width: 80%;
+
+p, ol, ul {
+    color: #696969; /* This number is pure coincidence ;D */
+    text-align: center;
+    font-size: 70%;
 }
 
-.perk-box {
-    width: 20%;
-    height: 130px;
-    padding: 50px 20px 10px 20px;
-    float: left;
-    text-align: center;    
-    font-size: 20px;
+
+/* Mobile friendly responsive Facilities and Perks section. */
+@media screen and (max-width:910px) {
+    .perk-box {
+        font-size: calc(14px + 12 * ((100vw - 300px) / 1300));
+        text-align: center;
+        height: 150px;
+        width: 150px;
+        padding: 22px 10px 0px 10px;
+    }
+
+    .pb1, .pb3, .pb5, .pb7 {
+        background-color: #e9e9e9;
+        clear: left;
+        float: left;
+        margin-left: calc(25vw - 170px);
+    }
+
+    .pb2, .pb4, .pb6, .pb8 {
+        clear: right;
+        float: left;
+    }
+
+    .pb2, .pb3, .pb6, .pb7 {
+        background-color: #47b075;
+    }
+
+    .perk-text {
+        padding: 10px;
+    }
 }
 
-.extra-bottom-border-facilities {
+/* Desktop/laptop Facilities and Perks section. */
+@media screen and (min-width:910px) {
+    .perk-box {
+        width: 19.5%;
+        height: 130px;
+        padding: 50px 20px 10px 20px;
+        float: left;
+        text-align: center;    
+        font-size: calc(14px + 12 * ((100vw - 300px) / 1300));
+    }
+
+    .pb2, .pb4, .pb5, .pb7 {
+        background-color: #47b075;
+    }
+}
+
+
+.extra-bottom-border-perks {
     border: 150px solid #e9e9e9;
     border-top-style: none;
     border-left-style: none;
@@ -183,35 +222,27 @@ p, ol, ul {
 }
 
 .extra-bottom-border-pricing {
-    border: 100px solid #191919;
-    border-top-style: none;
-    border-left-style: none;
-    border-right-style: none;
-}
-
-.green-background {
-    background-color: #47b075;
+    border: 110px solid #191919;
 }
 
 .pricing-box {
     width: 40%;
     float: left;
     background-color: #191919;
-    padding: 1% 5% 14% 4%;
+    padding: 1% 5% 4% 4%;
     text-align: center;
-}
-
-.box1 {
     border: #e9e9e9 1px solid;
     border-bottom-style: none;
     border-top-style: none;
 }
 
-.box2 {
-    border: #e9e9e9 1px solid;
-    border-bottom-style: none;
-    border-top-style: none;
+.no-left-border {
     border-left-style: none;
+}
+
+#price-description {
+    padding: 30px;
+    color: #47b075;
 }
 
 #option-pricing-title {
@@ -223,6 +254,13 @@ p, ol, ul {
     padding: 5px 0px 20px 0px;
     font-size: 50px;
     color: #ffff4c;
+}
+
+@media screen and (max-width:1000px) {
+    .pricing-box {
+        width: %;
+        padding: 1% 2.5% 4% 2.5%;
+    }
 }
 
 #photos {
@@ -248,7 +286,7 @@ p, ol, ul {
     height: 250px;
     float: left;
     margin: 0;
-    padding: 30px 30px;
+    padding: 40px 30px;
 }
 
 .footer {
