--- a/style.css
+++ b/style.css
@@ -276,20 +276,40 @@ p, ol, ul {
     padding: 0;
 }
 
-.box {
-    width: 40%;
-    float: left;
-    font-size: 80%;
-    margin: 0;
-    padding: 40px 30px 100px 60px;
+/* Making map responsive and mobile friendly. */
+@media screen and (max-width:955px) {
+    .mapbox {
+        height: 350px;
+        width: 350px;
+        margin: auto;
+    }
+
+    .contact-info-box {
+        width: 50%;
+        margin: auto;
+        font-size: calc(14px + 12 * ((100vw - 300px) / 1300));
+        text-align: center;
+        padding: 30px 0px;
+    }
 }
 
-.mapbox {
-    width: 40%;
-    height: 250px;
-    float: left;
-    margin: 0;
-    padding: 40px 30px;
+/* For desktop/laptop version of website. */
+@media screen and (min-width:955px) {
+    .mapbox {
+        width: 40%;
+        height: 250px;
+        float: left;
+        margin: 0;
+        padding: 40px 30px;
+    }
+
+    .contact-info-box {
+        width: 40%;
+        float: left;
+        font-size: 80%;
+        margin: 0;
+        padding: 40px 30px 100px 60px;
+    }
 }
 
 .footer {
