--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ p, ul {
 /* (For phones/tablets) */
 @media screen and (max-width:949px) {
     .table-row-prices {
-        padding: 5%; 
+        padding: 80px 5% 50px 5%; 
     }
     .pricing-box {
         width: 90%;
@@ -275,6 +275,10 @@ p, ul {
     .pricing-box-2 {
         border: #e9e9e9 1px solid;
         border-top-style: none;
+    }
+
+    .pricing-more-padding {
+        padding: 40px 0px;
     }
 }
 
@@ -338,11 +342,6 @@ p, ul {
     background-color: #191919;
 }
 
-.pricing-more-padding {
-    color: #191919;
-    padding: 40px 0px;
-}
-
 .pricing-box-1:hover, .pricing-box-2:hover {
     background-color: #262626;        
 }
@@ -356,6 +355,28 @@ ul {
 
 ul li:before {
     content: '✓';
+}
+
+.pricing-more-padding {
+    color: #191919;
+}
+
+/* Making photos bigger for mobile devices .*/
+@media screen and (max-width:910px) {
+    #extra-photos {
+        float:left;
+        width:50%;
+        height:auto;
+    }
+}
+
+/* Having 3 photos per line in bigger screens. */ 
+@media screen and (min-width:911px) {
+    #extra-photos {
+        float:left;
+        width:33.33%;
+        height:auto; 
+    }
 }
 
 #photos {
