--- a/style.css
+++ b/style.css
@@ -29,40 +29,80 @@ body {
     font-size: 20px;
 }
 
-/* Don't display the three-horizontal-barred icon. Only display it when
+/* Don't display the three-horizontal-barred hamburger. Only display it when
    width is less than 1020. */
-.topnav .icon {
-    display: none;
+@media screen and (min-width: 1021px) {
+    .hamburger {
+        display: none;
+    }
+
+    .sticky {
+        background-color: rgba(255,255,255,0.8);
+    }
 }
 
 @media screen and (max-width: 1020px) {
-    .topnav a:not(#first-child):not(#toggle-button) {display: none;}
+    .topnav a:not(#first-child):not(.hamburger) {
+        display: none;
+    }
 
-    .topnav a.icon {
+    .topnav a.hamburger {
         float: right;
-        display: block;
         padding: 24px 30px 10px 30px;
-    }
-
-    .topnav.responsive {position: relative;}
-
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
     }
 
     .sticky + .content {
         padding-top: 77px;
     }
-}    
 
+    .sidenav {
+        display: block;
+        z-index: 1;
+        right: 0;
+        height: 100%;
+        background-color: #000000;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 30px;
+        position: fixed;
+    }
+
+    .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        display: block;
+        background-color: #000000;
+        font-color: #e9e9e9;
+        font-size: calc(20px + 12 * ((100vw - 300px) / 1300));
+        transition: 0.3s;
+    }
+
+    .sidenav a:link {
+        color: #e9e9e9;
+        text-decoration: none;
+    }
+
+    .sidenav a:visited {
+        color: #e9e9e9;
+        text-decoration: none;
+    }
+
+    .sidenav a:hover {
+        color: #47b075;
+        text-decoration: underline;
+    }
+
+    .sidenav a:active {
+        color: #47b075;
+        text-decoration: underline;
+    }
+
+    .closebtn {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+    }
+}
 
 /* Styling of the links. */
 a:link {
@@ -90,9 +130,10 @@ a:active {
 /* Styling of the sticky header once screen is scrolled down. */
 .sticky {
     position: fixed;
+    background-color: rgba(255, 255, 255, 0.8);
     top: 0;
+    z-index: 1;
     width: 100%;
-    background-color: rgba(255,255,255,0.8);
 }
 
 /* The different sections of the website are table-row classes. */
