--- a/style.css
+++ b/style.css
@@ -55,10 +55,6 @@ body {
         padding: 24px 30px 10px 30px;
     }
 
-    .sticky + .content {
-        padding-top: 77px;
-    }
-
     .sidenav {
         z-index: 1;
         display: none;
@@ -114,7 +110,12 @@ body {
     #navbar-footer {
         font-size: calc(10px + 12 * ((100vw - 300px) / 1300));
     }
+
+    .sticky + .content {
+        padding-top: 100px;
+    }
 }
+
 
 /* Styling of the links. */
 a:link {
@@ -184,25 +185,18 @@ img {
     top: 0;
 }
 
-/* For iPhone 6 portrait. */
-@media screen and (max-width:413px) {
-    .introduction-text {
-        top: 15vh;
-    }   
-}
-
-
-/* For mobile screens (but not iPhone 6 portrait). */
+/* For mobile screens. */
 .introduction-text {
-    top: 20vh;
-    width: 80%;
-    left: 10vw;
+    top: 19vh;
+    width: 90%;
+    left: 5vw;
+    right: 5vw;
     text-align: center;
     position: absolute;
-    font-size: calc(25px + 12 * ((100vw - 300px) / 1300));
+    font-size: calc(27px + 12 * ((100vw - 300px) / 1300));
     color: black;
-    padding: 20px 0px;
-    background-color: rgba(255,255,255,0.55);
+    padding: 3px 0px;
+    background-color: rgba(255, 255, 255, 0.55);
     border-radius: 5px;
 }
 
