--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ p, ul {
 }
 
 .pricing-box-1:hover, .pricing-box-2:hover {
-    background-color: #262626;
+    background-color: black;
 }
 
 ul {
