Refactored CSS. Modified map do displays full width when in mobile.

--- a/style.css
+++ b/style.css
@@ -5,11 +5,6 @@ body {
     font-size: calc(22px + 12 * ((100vw - 300px) / 1300));
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
 /* The positioning and padding of the WorkIn logo. */
 .logo-image {
     float: left;
@@ -21,36 +16,21 @@ body {
 .button {
     float: right;
     color: black;
-    text-align: center;
-    text-decoration: none;
     display: inline-block;
-    cursor: pointer;
     padding: 26px 44px 0px 10px;
     font-size: 20px;
-}
-
-.hidden {
-    display: none;
 }
 
 /* Don't display the three-horizontal-barred hamburger. Only display it when
    width is less than 1020. */
 @media screen and (min-width: 1021px) {
-    .hamburger, .hidden {
+    .hamburger {
         display: none;
-    }
-
-    .sticky {
-        background-color: rgba(255,255,255,0.8);
-        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
     }
 }
 
+/* Display the hamburger and the sidenav at a width of 1020px of less. */
 @media screen and (max-width: 1020px) {
-    .topnav a:not(#first-child):not(.hamburger) {
-        display: none;
-    }
-
     .topnav a.hamburger {
         float: right;
         padding: 24px 30px 10px 30px;
@@ -58,7 +38,6 @@ body {
 
     .sidenav {
         z-index: 1;
-        display: none;
         right: 0;
         height: 100%;
         background-color: #000000;
@@ -68,8 +47,11 @@ body {
         position: fixed;
     }
 
+    .topnav a:not(#first-child):not(.hamburger), .sidenav {
+        display: none;
+    }
+
     .sidenav a {
-        text-decoration: none;
         display: block;
         background-color: #000000;
         font-color: #e9e9e9;
@@ -77,22 +59,12 @@ body {
         transition: 0.3s;
     }
 
-    .sidenav a:link {
+    .sidenav a:link, .sidenav a:visited {
         color: #e9e9e9;
         text-decoration: none;
     }
 
-    .sidenav a:visited {
-        color: #e9e9e9;
-        text-decoration: none;
-    }
-
-    .sidenav a:hover {
-        color: #47b075;
-        text-decoration: underline;
-    }
-
-    .sidenav a:active {
+    .sidenav a:hover, .sidenav a:active {
         color: #47b075;
         text-decoration: underline;
     }
@@ -117,27 +89,23 @@ body {
     }
 }
 
-
 /* Styling of the links. */
-a:link {
-    color: #000000;
-    text-decoration: none;
-}
-
-a:visited {
+a:link, a:visited {
     color: #000000;
     text-decoration: none;
 }
 
 a:hover {
     color: #47b075;
-    text-decoration: underline;
     -webkit-transition-duration: 0.2s; /* Safari */
     transition-duration: 0.2s;
 }
 
 a:active {
     color: #FFFFFF;
+}
+
+a:hover, a:active {
     text-decoration: underline;
 }
 
@@ -156,7 +124,6 @@ a:active {
     background-color: none;
     width: 80%;
     padding: 80px 10% 28% 10%;
-    clear: both;
 }
 
 .black-background {
@@ -165,10 +132,6 @@ a:active {
 
 .gray-background {
     background-color: #e9e9e9;
-}
-
-.green-background {
-    background-color: #47b075;
 }
 
 .slideshow {
@@ -182,32 +145,34 @@ img {
 .slideshow-container {
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
     top: 0;
 }
 
 /* For mobile screens. */
-.introduction-text {
-    top: 19vh;
-    width: 90%;
-    left: 5vw;
-    right: 5vw;
-    text-align: center;
-    position: absolute;
-    font-size: calc(27px + 12 * ((100vw - 300px) / 1300));
-    color: black;
-    padding: 3px 0px;
-    background-color: rgba(255, 255, 255, 0.55);
-    border-radius: 5px;
+@media screen and (max-width:659px) {
+    .introduction-text {
+        top: 19vh;
+        font-size: calc(27px + 12 * ((100vw - 300px) / 1300));
+    }
 }
 
 /* For desktop screens. */
 @media screen and (min-width:660px) {
     .introduction-text {
-        font-size: calc(30px + 12 * ((100vw - 300px) / 1300));
+        font-size: calc(35px + 12 * ((100vw - 300px) / 1300));
         top: 40vh;
     }
+}
+
+.introduction-text {
+    width: 90%;
+    left: 5vw;
+    right: 5vw;
+    position: absolute;
+    color: black;
+    padding: 3px 0px;
+    background-color: rgba(255, 255, 255, 0.55);
+    border-radius: 5px;
 }
 
 /* No display of the downward-pointing arrow when width is greater than 1011px
@@ -241,37 +206,28 @@ img {
         color: white;
     }
 
-    .arrow a:hover {
+    .arrow a:hover, .arrow a:active {
         color: #47b075;
-        text-decoration: none;
-    }
-
-    .arrow a:active {
         text-decoration: none;
     }
 }
 
 /* All h2's have this styling. */
 h2 {
-    color: #47b075;
     font-size: 100%;
     padding: 20px 0px 0px 0px;
-    text-align: center;
 }
 
 /* This is to style the horizontal bar below each section title. */
 .lowbar {
     font-size: 80%;
-    color: #47b075;
     padding: 20px 0px 15px 0px;
 }
 
 p, ul {
     color: #a5a5a5;
-    text-align: center;
     font-size: 73%;
 }
-
 
 /* Mobile friendly responsive Facilities and Perks section. */
 /* (For phones and tablets) */
@@ -295,7 +251,6 @@ p, ul {
 
     .pb1, .pb3, .pb5, .pb7 {
         background-color: #e9e9e9;
-        margin: auto;
     }
 
     .pb1:hover, .pb3:hover, .pb5:hover, .pb7:hover {
@@ -304,6 +259,9 @@ p, ul {
 
     .pb2, .pb4, .pb6, .pb8 {
         background-color: #47b075;
+    }
+
+    .pb1, .pb3, .pb5, .pb7, .pb2, .pb4, .pb6, .pb8 {
         margin: auto;
     }
 
@@ -357,10 +315,9 @@ p, ul {
         width: 90%;
         margin: auto;
         clear: both;
-        padding: 20px;
     }
 
-    #price-description {
+    .pricing-box, #price-description {
         padding: 20px;
     }
 
@@ -382,14 +339,12 @@ p, ul {
     }
 }
 
-
 /* For desktop/laptop version of Prices section. */
 @media screen and (min-width:950px) {
     .table-row-prices {
         background-color: none;
         width: 80%;
         padding: 80px 10% 25px 10%;
-        clear: both;
     }
 
     .pricing-box {
@@ -414,10 +369,13 @@ p, ul {
     }
 
     #ref {
-        clear: both;
         padding: 0px;
         margin: 0px;
         color: #191919;
+    }
+
+    .table-row-prices, #ref {
+        clear: both;
     }
 }
 
@@ -434,11 +392,9 @@ p, ul {
     padding: 5px 0px 20px 0px;
     font-size: 50px;
     color: #ffff81; /* This is a yellow color. */
-    text-align: center;
 }
 
 .pricing-box {
-    text-align: center;
     background-color: #191919;
 }
 
@@ -447,10 +403,13 @@ p, ul {
 }
 
 ul {
-    color: #47b075;
     list-style: none;
     text-align: left;
     padding-left: 60px;
+}
+
+h2, .lowbar, ul {
+    color: #47b075;
 }
 
 ul li:before {
@@ -464,78 +423,99 @@ ul li:before {
 /* Making photos bigger for mobile devices .*/
 @media screen and (max-width:910px) {
     #extra-photos {
-        float:left;
-        width:50%;
-        height:auto;
+        width: 50%;
     }
 }
 
 /* Having 3 photos per line in bigger screens. */
 @media screen and (min-width:911px) {
     #extra-photos {
-        float:left;
-        width:33.33%;
-        height:auto;
+        width: 33.33%;
     }
 }
 
-#photos {
-    padding: 0%;
-    clear: both;
+#extra-photos {
+    float: left;
+    height: auto;
 }
 
-.photos-section {
-    margin: 0;
+*, .slideshow-container, #photos, .photos-section {
     padding: 0;
+    margin: 0;
 }
 
 /* Making map responsive and mobile friendly. */
-@media screen and (max-width:955px) {
+@media screen and (max-width:910px) {
+    .table-row-contact-us {
+        padding: calc(80px + 100vw) 0 10% 0;
+        width: 100%
+    }
+}
+
+@media screen and (min-width:911px) and (max-width:954px) {
+    .table-row-contact-us {
+        padding: calc(80px + (4 * 100vw / 9)) 10% 10% 10%;
+        width: 80%;
+    }
+}
+
+@media screen and (max-width:954px) {
     .mapbox {
         height: 350px;
-        margin: auto;
     }
 
     .contact-info-box {
-        width: 50%;
-        margin: auto;
-        font-size: calc(14px + 12 * ((100vw - 300px) / 1300));
-        text-align: center;
         padding: 30px 0px;
+        text-align: center;
+    }
+}
+
+@media screen and (min-width:955px) {
+    .table-row-contact-us {
+        padding: calc(80px + (4 * 100vw / 9)) 10% 28% 10%;
     }
 }
 
 /* For desktop/laptop version of website. */
 @media screen and (min-width:955px) {
     .contact-info-box {
-        width: 40%;
-        float: left;
-        font-size: 80%;
-        margin: 0;
         padding: 0px 30px 100px 60px;
     }
 
     .mapbox {
-        width: 40%;
         height: 300px;
+        padding: 30px 30px;
+    }
+
+    .contact-info-box, .mapbox {
         float: left;
         margin: 0;
-        padding: 30px 30px;
+        width: 40%;
     }
 }
 
-.footer {
-    color: black;
-    clear: both;
-    padding: 10px 20px;
-  /*border: 40px solid #e9e9e9;
-    border-left-style: none;
-    border-bottom-style: none;
-    border-right-style: none;*/
-    text-align: center;
+#contact-us {
+    color: #e9e9e9;
+}
+
+.contact-info-box {
     font-size: 80%;
+}
+
+.footer {
+    background-color: #47b075;
+    padding: 10px 20px;
+    font-size: 80%;
+}
+
+.introduction-text, h2, p, ul, #starting-price, .pricing-box, .footer {
+    text-align: center;
 }
 
 .footer-text {
     color: black;
+}
+
+.table-row, #photos, .footer {
+    clear: both;
 }
